# Dual_Core_RP2040

./: CMakeLists.txt  README.md  main.c
lib/: bmp280.h
